added: codeium-vim and tweaked

--- a/.config/nvim/dein_lazy.toml
+++ b/.config/nvim/dein_lazy.toml
@@ -80,6 +80,12 @@ repo = 'lambdalisue/glyph-palette.vim'
 on_source = ['nerdfont.vim']
 
 
+# -------------------------- AI plugins -------------------------
+[[plugins]]
+repo = 'Exafunction/codeium.vim'
+on_event = 'BufRead'
+# hook_add = 'source ~/.config/nvim/plugins/codeium-vim.rc.vim'
+
 # ------------------------- LSP plugins -------------------------
 # [[plugins]]
 # repo = 'neoclide/coc.nvim'
@@ -303,8 +309,8 @@ hook_source = 'source ~/.config/nvim/plugins/neoterm.rc.vim'
 repo = 'bogado/file-line'
 on_event = 'BufRead'
 
-[[plugins]]
-# tuskk (tˈʌsk): ripgrep を利用して SKK ライクな日本語入力を行うプラグイン
-repo = 'kawarimidoll/tuskk.vim'
-on_event = 'BufRead'
-hook_source = 'source ~/.config/nvim/plugins/tuskk.rc.vim'
+# [[plugins]]
+# # tuskk (tˈʌsk): ripgrep を利用して SKK ライクな日本語入力を行うプラグイン
+# repo = 'kawarimidoll/tuskk.vim'
+# on_event = 'BufRead'
+# hook_source = 'source ~/.config/nvim/plugins/tuskk.rc.vim'
