updated bashrc for WSL2

--- a/.config/starship.toml
+++ b/.config/starship.toml
@@ -41,7 +41,7 @@ error_symbol = "[❯](bold red)"
 vimcmd_symbol = "[❮](bold green)"
 
 [directory]
-style = "fg:#e3e5e5 bg:#769ff0"
+style = "fg:#212736 bg:#769ff0"
 format = "[ $path ]($style)"
 truncation_length = 3
 truncation_symbol = "…/"
