--- a/win/.gitconfig
+++ b/win/.gitconfig
@@ -15,6 +15,10 @@
     lol = log --graph --decorate --pretty=oneline --abbrev-commit --all
     tree = log --graph --decorate --abbrev-commit --format=format:'%C(magenta)%h%C(reset) - %C(bold green)(%ar) - %C(reset)%C(white)%s%C(reset)%C(bold blue) - %an%C(reset) %C(bold yellow)%d%C(reset)' --all --date=relative
     ups = config --get-regexp branch
+    ck = checkout
+    bd = branch -d
+    bD = branch -D
+    rp = remote prune
     rdiff = diff master..origin/master
     fdiff = diff HEAD FETCH_HEAD
     fmerge = merge --no-ff FETCH_HEAD
